# my_bevy_game

./: Cargo.toml
src/: main.rs  ship.rs  ship_components.rs
